--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: siberian_logger
 description: "custom logger for siberian projects"
-version: 0.0.1
+version: 0.0.2
 homepage: https://git.siberian.pro/toplionkin/flutter_siberian_logger.git
 
 environment:
@@ -12,7 +12,7 @@ dependencies:
     sdk: flutter
 
 
-  logger: ^2.0.2+1
+  logger: ^2.2.0
   sprintf: ^7.0.0
   intl: ^0.18.1
 
