--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_logger
 description: "custom logger for flutter projects"
-version: 0.0.2
+version: 0.0.3
 homepage: https://github.com/Anfet/flutter_logger.git
 
 environment:
@@ -14,7 +14,7 @@ dependencies:
 
   logger: ^2.2.0
   sprintf: ^7.0.0
-  intl: ^0.18.1
+#  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
